apps/rook-ceph/dashboard/base/dashboard-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ceph.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
  hostnames: [ceph.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
