apps/rook-ceph/dashboard/base/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.apps.lab.mxe11.nl`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
  tls:
    secretName: ceph-dashboard-tls # pragma: allowlist secret
