apps/rook-ceph/dashboard/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-https
  namespace: rook-ceph
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
      sectionName: https
  hostnames: [ceph.apps.lab.mxe11.nl]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-http
  namespace: rook-ceph
spec:
  parentRefs:
    - name: cilium-web-gateway
      namespace: cilium-gateway-system
  hostnames: [ceph.apps.lab.mxe11.nl]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
